--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule ".\\Vendor\\SDL"]
-	path = .\\Vendor\\SDL
+[submodule "Vendor/SDL"]
+	path = Vendor/SDL
 	url = https://github.com/libsdl-org/SDL.git
 [submodule "Vendor/vkboostrap"]
 	path = Vendor/vkboostrap
 	url = https://github.com/charles-lunarg/vk-bootstrap.git
-[submodule ".\\Vendor\\VulkanMemoryAllocator"]
-	path = .\\Vendor\\VulkanMemoryAllocator
+[submodule "Vendor/VulkanMemoryAllocator"]
+	path = Vendor/VulkanMemoryAllocator
 	url = https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
-[submodule ".\\Vendor\\glm"]
-	path = .\\Vendor\\glm
+[submodule "Vendor/glm"]
+	path = Vendor/glm
 	url = https://github.com/g-truc/glm.git
