--- a/Mars/CMakeLists.txt
+++ b/Mars/CMakeLists.txt
@@ -11,14 +11,28 @@ add_library(${PROJECT_NAME}
 			Engine/Core/Application.cpp
 			Engine/Core/Window.h
 			Engine/Core/Window.cpp
+			Engine/Core/Input.h
+			Engine/Core/Input.cpp
 			Engine/Core/ResourceManager.h
 			Engine/Core/ResourceManager.cpp
+			Engine/ECS/Scene.h
+			Engine/ECS/Scene.cpp
+			Engine/ECS/Entity.h
+			Engine/ECS/Entity.cpp
+			Engine/ECS/Components/Components.h
+			Engine/ECS/Components/Components.cpp
 			Engine/Util/Utils.h
 			Engine/Util/Utils.cpp
 			Engine/Renderer/Renderer.h
 			Engine/Renderer/Renderer.cpp
+			Engine/Renderer/Camera.h
+			Engine/Renderer/Camera.cpp
 			Engine/Renderer/Vulkan/VulkanMesh.h
 			Engine/Renderer/Vulkan/VulkanMesh.cpp
+			Engine/Renderer/Vulkan/VulkanTexture.h
+			Engine/Renderer/Vulkan/VulkanTexture.cpp
+			Engine/Renderer/Vulkan/VulkanMaterial.h
+			Engine/Renderer/Vulkan/VulkanMaterial.cpp
 			Engine/Renderer/Vulkan/VulkanStructures.h
 			Engine/Renderer/Vulkan/VulkanUtils.h
 			Engine/Renderer/Vulkan/VulkanUtils.cpp
