--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(Sandbox VERSION 0.1.0)
+project(Rover VERSION 0.1.0)
 
-add_executable(Sandbox main.cpp)
+add_executable(Rover main.cpp)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC Mars Vendor vulkan-1)
 
