--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Vendor/entt"]
 	path = Vendor/entt
 	url = https://github.com/skypjack/entt.git
+[submodule ".\\Vendor\\imgui"]
+	path = .\\Vendor\\imgui
+	url = https://github.com/ocornut/imgui.git
