--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Rover VERSION 0.1.0)
 
-add_executable(Rover main.cpp)
+add_executable(Rover main.cpp ImGui/ImGuiLayer.cpp ImGui/ImGuiLayer.h)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC Mars Vendor vulkan-1)
+target_link_libraries(${PROJECT_NAME} PUBLIC Mars Vendor imgui vulkan-1)
 
 target_include_directories(${PROJECT_NAME} PUBLIC "../Mars")
 
