--- a/Mars/CMakeLists.txt
+++ b/Mars/CMakeLists.txt
@@ -85,6 +85,8 @@ add_library(${PROJECT_NAME}
 
 			Engine/Scripting/NativeScriptingLayer.h
 			Engine/Scripting/NativeScriptingLayer.cpp
+			Engine/Scripting/NativeScriptComponent.h
+			Engine/Scripting/NativeScriptComponent.cpp
 
 			Engine/Physics/Physics2DLayer.cpp
 			Engine/Physics/Physics2DLayer.h
