--- a/Rover/Assets/Scenes/Rover.yaml
+++ b/Rover/Assets/Scenes/Rover.yaml
@@ -29,22 +29,22 @@ Entities:
       Scale: [1, 1, 1]
     RenderableObject:
       Mesh: cone
-      Material: default_material
+      Material: player_material
     Script:
       Binding: class PlayerController
     RigidBody2D:
       Type: 2
       UseGravity: false
     ParticleSystem:
-      MaxParticles: 128
+      MaxParticles: 256
       ParticleSize: 0.25
-      LifeTime: 0.25
-      EmissionRate: 418
-      Velocity: [500, 500]
+      LifeTime: 0.667
+      EmissionRate: 542
+      Velocity: [100, -250]
       Running: false
       Color1: [0.5, 0.5, 0, 1]
       Color2: [1, 0, 0, 1]
-      Texture: default_material
+      Material: default_material
   - Entity: 175762383
     Tag:
       Tag: Ball
