--- a/Rover/Assets/Scenes/Rover.yaml
+++ b/Rover/Assets/Scenes/Rover.yaml
@@ -16,10 +16,13 @@ Entities:
     Transform:
       Position: [0, -10, 0]
       Rotation: [-90, 0, 0]
-      Scale: [1, 1, 1]
+      Scale: [100, 1, 1]
     RenderableObject:
       Mesh: quad
       Material: default_material
+    RigidBody2D:
+      Type: 1
+      UseGravity: false
   - Entity: 1445797466
     Tag:
       Tag: Directional Light
