added camera controller script to update camera and changed all memory allocations to use engine memory impls

--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -31,6 +31,10 @@ target_include_directories(${PROJECT_NAME} PUBLIC "../Mars" "./")
 set(MRS_BUILD_CONFIGURATION "Debug")
 set(MRS_APP_OUTPUT_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${MRS_BUILD_CONFIGURATION}")
 
+if(MRS_BUILD_CONFIGURATION STRLESS_EQUAL "Debug")
+	add_compile_definitions(MRS_DEBUG)
+endif()
+
 # Copy resources
 add_custom_target(copy_assets ALL
 	COMMAND ${CMAKE_COMMAND} -E copy_directory
