--- a/Rover/Assets/Scenes/RoverBasicSetup.yaml
+++ b/Rover/Assets/Scenes/RoverBasicSetup.yaml
@@ -1,5 +1,34 @@
 Scene: Rover
 Entities:
+  - Entity: 3059965400
+    Tag:
+      Tag: Editor Camera
+    Transform:
+      Position: [0, 0, 50]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    Script:
+      Binding: class mrs::CameraController
+    Camera:
+      Type: 2
+      Front: [-4.37113883e-08, 0, -1]
+      Right: [1, 0, -4.37113883e-08]
+      Up: [0, 1, 0]
+      WorldUp: [0, 1, 0]
+      Yaw: -90
+      Pitch: 0
+      AspectW: 1600
+      AspectH: 900
+      Active: true
+  - Entity: 850172156
+    Tag:
+      Tag: Editor Manager
+    Transform:
+      Position: [0, 0, 0]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    Script:
+      Binding: class mrs::EditorManager
   - Entity: 1310086022
     Tag:
       Tag: Game Camera
@@ -18,8 +47,6 @@ Entities:
       AspectW: 1080
       AspectH: 720
       Active: true
-    Script:
-      Binding: class mrs::CameraController
   - Entity: 175762383
     Tag: 
       Tag: Plane
