--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -2,20 +2,27 @@ cmake_minimum_required(VERSION 3.0.0)
 project(Rover VERSION 0.1.0)
 
 add_executable(Rover
+	"Rover.h"
 	"Rover.cpp"
 	"UIHelpers.cpp"
 	"Scripts/Editor/EditorManager.h"
 	"Scripts/Editor/EditorManager.cpp"
 	"Scripts/Editor/CameraController.h"
 	"Scripts/Editor/CameraController.cpp"
+	"Panels/IPanel.h"
+	"Panels/IPanel.cpp"
+	"Panels/Viewport.h"
+	"Panels/Viewport.cpp"
 	"Panels/Components/ComponentPanels.h"
 	"Panels/Components/ComponentPanels.cpp"
 	"Panels/InspectorPanel.h"
 	"Panels/InspectorPanel.cpp"
+	"Panels/HierarchyPanel.h"
+	"Panels/HierarchyPanel.cpp"
+	"Panels/PerformancePanel.h"
+	"Panels/PerformancePanel.cpp"
 	"Panels/Menus/MainMenu.h"
 	"Panels/Menus/MainMenu.cpp"
-	"Panels/Menus/Viewport.h"
-	"Panels/Menus/Viewport.cpp"
 
 	"GameLayer/GameLayer.h"
 	"GameLayer/GameLayer.cpp"
