--- a/Rover/Assets/Scenes/Rover.yaml
+++ b/Rover/Assets/Scenes/Rover.yaml
@@ -1,58 +1,92 @@
 Scene: Rover
 Entities:
-  - Entity: 1310086022
+  - Entity: 222006628
+    Tag:
+      Tag: Spawner
+    Transform:
+      Position: [0, 0, 0]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    Script:
+      Binding: class Spawner
+  - Entity: 638596970
+    Tag:
+      Tag: Directional Light
+    Transform:
+      Position: [100, 100, 100]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    MeshRenderer:
+      Mesh: cube
+      Material: default
+    DirectionalLight:
+      Ambient: [0.5, 0.5, 0.5, 0]
+      Diffuse: [0.200000003, 0.200000003, 0.200000003, 0]
+      Specular: [1, 1, 1, 0]
+  - Entity: 1617350537
+    Tag:
+      Tag: Container
+    Transform:
+      Position: [-50, 50, 0]
+      Rotation: [90, 45, 0]
+      Scale: [0.05, 0.05, 0.05]
+    MeshRenderer:
+      Mesh: container
+      Material: container
+    RigidBody2D:
+      Type: 1
+      UseGravity: false
+  - Entity: 1617350535
+    Tag:
+      Tag: Container
+    Transform:
+      Position: [50, 50, 0]
+      Rotation: [90, 45, 0]
+      Scale: [0.05, 0.05, 0.05]
+    MeshRenderer:
+      Mesh: container
+      Material: container
+    RigidBody2D:
+      Type: 1
+      UseGravity: false
+  - Entity: 2970542136
+    Tag:
+      Tag: Plane
+    Transform:
+      Position: [0, 0, 0]
+      Rotation: [90, 0, 0]
+      Scale: [100, 100, 100]
+    MeshRenderer:
+      Mesh: plane
+      Material: checkered
+    MeshCollider:
+      Type: 2
+  - Entity: 2269386998
+    Tag:
+      Tag: PlayerController
+    Transform:
+      Position: [36.7554207, -201.272247, 141.286575]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    Script:
+      Binding: class Player
+  - Entity: 2269386991
     Tag:
       Tag: Game Camera
     Transform:
       Position: [0, 0, 50]
       Rotation: [0, 0, 0]
       Scale: [1, 1, 1]
-    Camera:
-      Type: 2
-      Front: [0.155589059, -0.500000179, -0.851934254]
-      Right: [0.983728945, -0, 0.179658771]
-      Up: [0.0898294151, 0.866025329, -0.491864651]
-      WorldUp: [0, 1, 0]
-      Yaw: -79.650116
-      Pitch: -30.0000114
-      AspectW: 1080
-      AspectH: 720
-      Active: true
     Script:
       Binding: class mrs::CameraController
-  - Entity: 175762383
-    Tag: 
-      Tag: Plane
-    Transform:
-      Position: [0, -10, 0]
-      Rotation: [-90, 0, 0]
-      Scale: [100, 1, 1]
-    MeshRenderer:
-      Mesh: quad
-      Material: default_material
-    RigidBody2D:
-      Type: 1
-      UseGravity: false
-  - Entity: 175762383
-    Tag: 
-      Tag: Container
-    Transform:
-      Position: [0, -10, 0]
-      Rotation: [-90, 0, 0]
-      Scale: [1, 1, 1]
-    MeshRenderer:
-      Mesh: container
-      Material: container
-    RigidBody2D:
+    Camera:
       Type: 2
-      UseGravity: true
-  - Entity: 1445797466
-    Tag:
-      Tag: Directional Light
-    Transform:
-      Position: [150, 900, 250]
-      Rotation: [0, 0, 0]
-      Scale: [1, 1, 1]
-    DirectionalLight:
-      Intensity: 0
-      
+      Front: [0, 0,0]
+      Right: [0, 0, 0]
+      Up: [0, 0 ,0]
+      WorldUp: [0, 1, 0]
+      Yaw: -90.0
+      Pitch: 0.0
+      AspectW: 1600
+      AspectH: 900
+      Active: true
