--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -28,10 +28,14 @@ add_executable(Rover
 	"GameLayer/GameLayer.cpp"
 	"GameLayer/Scripts/Unit.h"
 	"GameLayer/Scripts/Unit.cpp"
+	"GameLayer/Scripts/Ship.h"
+	"GameLayer/Scripts/Ship.cpp"
 	"GameLayer/Scripts/Player.h"
 	"GameLayer/Scripts/Player.cpp"
 	"GameLayer/Scripts/Spawner.h"
 	"GameLayer/Scripts/Spawner.cpp"
+	"GameLayer/Scripts/GameCamera.h"
+	"GameLayer/Scripts/GameCamera.cpp"
 	"GameLayer/Scripts/GameManager.h"
 	"GameLayer/Scripts/GameManager.cpp"
 )
