Can now render a sphere using 6 planes

--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -26,6 +26,10 @@ add_executable(Rover
 
 	"GameLayer/GameLayer.h"
 	"GameLayer/GameLayer.cpp"
+
+	"GameLayer/RenderPipelines/CBRenderPipeline.h"
+	"GameLayer/RenderPipelines/CBRenderPipeline.cpp"
+
 	"GameLayer/Scripts/Unit.h"
 	"GameLayer/Scripts/Unit.cpp"
 	"GameLayer/Scripts/Ship.h"
