added orbiting moons

--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -32,12 +32,18 @@ add_executable(Rover
 
 	"GameLayer/Scripts/Unit.h"
 	"GameLayer/Scripts/Unit.cpp"
+	"GameLayer/Scripts/Projectile.h"
+	"GameLayer/Scripts/Projectile.cpp"
 	"GameLayer/Scripts/Ship.h"
 	"GameLayer/Scripts/Ship.cpp"
+	"GameLayer/Scripts/Striker.h"
+	"GameLayer/Scripts/Striker.cpp"
 	"GameLayer/Scripts/Player.h"
 	"GameLayer/Scripts/Player.cpp"
 	"GameLayer/Scripts/Planet.h"
 	"GameLayer/Scripts/Planet.cpp"
+	"GameLayer/Scripts/Moon.h"
+	"GameLayer/Scripts/Moon.cpp"
 	"GameLayer/Scripts/Spawner.h"
 	"GameLayer/Scripts/Spawner.cpp"
 	"GameLayer/Scripts/GameCamera.h"
