--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -30,12 +30,20 @@ add_executable(Rover
 	"GameLayer/RenderPipelines/CBRenderPipeline.h"
 	"GameLayer/RenderPipelines/CBRenderPipeline.cpp"
 
+	"GameLayer/Scripts/Effect.h"
+	"GameLayer/Scripts/Effect.cpp"
 	"GameLayer/Scripts/Unit.h"
 	"GameLayer/Scripts/Unit.cpp"
 	"GameLayer/Scripts/Projectile.h"
 	"GameLayer/Scripts/Projectile.cpp"
 	"GameLayer/Scripts/Ship.h"
 	"GameLayer/Scripts/Ship.cpp"
+	"GameLayer/Scripts/ShipCombat.h"
+	"GameLayer/Scripts/ShipCombat.cpp"
+	"GameLayer/Scripts/Scrap.h"
+	"GameLayer/Scripts/Scrap.cpp"
+	"GameLayer/Scripts/PlayerShipController.h"
+	"GameLayer/Scripts/PlayerShipController.cpp"
 	"GameLayer/Scripts/Striker.h"
 	"GameLayer/Scripts/Striker.cpp"
 	"GameLayer/Scripts/Player.h"
