--- a/Rover/Assets/Scenes/Rover.yaml
+++ b/Rover/Assets/Scenes/Rover.yaml
@@ -43,3 +43,21 @@ Entities:
       Ambient: [1, 1, 1, 1]
       Diffuse: [0.5, 0.5, 0.5, 1]
       Specular: [1, 1, 1, 1]
+  - Entity: 4404601799
+    Tag:
+      Tag: Fire Particles
+    Transform:
+      Position: [0, 0, 0.1]
+      Rotation: [0, 0, 0]
+      Scale: [1, 1, 1]
+    ParticleSystem:
+      MaxParticles: 32
+      ParticleSize: 0.5
+      SpreadAngle: 45
+      LifeTime: 0.66
+      EmissionRate: 12
+      Velocity: [10, 10]
+      Running: true
+      Color1: [0.883, 0.490, 0.000, 1.000]
+      Color2: [0.114, 0.054, 0.006, 0.000]
+      Material: smoke
