--- a/Rover/CMakeLists.txt
+++ b/Rover/CMakeLists.txt
@@ -5,12 +5,15 @@ add_executable(Rover
 	"Rover.h"
 	"Rover.cpp"
 	"UIHelpers.cpp"
+	"Scripts/Spawner.h"
+	"Scripts/Spawner.cpp"
 	"Scripts/Editor/CameraController.h"
 	"Scripts/Editor/CameraController.cpp"
 	"Scripts/Editor/EditorManager.h"
 	"Scripts/Editor/EditorManager.cpp"
 	"Scripts/Editor/EditorCameraController.h"
 	"Scripts/Editor/EditorCameraController.cpp"
+
 	"Panels/IPanel.h"
 	"Panels/IPanel.cpp"
 	"Panels/Viewport.h"
@@ -32,8 +35,6 @@ add_executable(Rover
 	"GameLayer/RenderPipelines/CBRenderPipeline.h"
 	"GameLayer/RenderPipelines/CBRenderPipeline.cpp"
 
-	"GameLayer/Scripts/Unit.h"
-	"GameLayer/Scripts/Unit.cpp"
 	"GameLayer/Scripts/Ship.h"
 	"GameLayer/Scripts/Ship.cpp"
 	"GameLayer/Scripts/ShipMovement.h"
